<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/main" />

    <item
        android:id="@+id/clientProfileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_follower"
        android:title="@string/profile">
    </item>

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/requestsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_request"
        android:title="@string/requests" />

    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/past_requests" />
</menu>