<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/fixerProfileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_follower"
        android:title="@string/profile">
    </item>

    <item
        android:id="@+id/requestsFragment2"
        android:enabled="true"
        android:icon="@drawable/ic_request"
        android:title="@string/requests" />

    <item
        android:id="@+id/pastRequestsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/past_requests" />

    <item
        android:id="@+id/changePricesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_dollar"
        android:title="@string/change_prices" />


</menu>