<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:orientation="vertical"
    tools:context=".home.client_profile.edit_profile.ClientEditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aaffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/user_test" />

            <ProgressBar
                android:id="@+id/client_profile_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_gravity="center">
            </ProgressBar>

            <EditText
                android:id="@+id/client_name_show"
                style="@style/SubTitleProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name_hint"
                />

            <EditText
                android:id="@+id/client_phone_show"
                android:hint="@string/hint_phone_number"
                style="@style/SubTitleProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/ClientRegionSpinner"
                style="@style/SubTitleProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <EditText
                android:id="@+id/client_id_show"
                style="@style/SubTitleProfileEditText"
                android:layout_width="match_parent"
                android:gravity="right"
                android:inputType="numberPassword|number"
                android:layout_height="wrap_content"
                android:hint="@string/hint_id" />

            <ProgressBar
                android:id="@+id/client_profile_save_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_gravity="center">
            </ProgressBar>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/client_save_edit_profile_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"
                android:text="@string/save"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>